<resources>
    <string name="app_name">MAV PC</string>

    <!-- login -->
    <string name="login_title">Inicio de Sesión</string>
    <string name="login_email">Correo Electrónico</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_enter">Entrar</string>
    <string name="login_register"><u>Registrate</u></string>

    <!-- explorar -->

    <!-- datos -->

    <!-- favoritos -->

    <!-- incidencias -->
    <string name="incid_title">Crear incidencia</string>
    <string name="incid_type">Tipo de incidencia</string>x
    <string name="incid_road">Carretera</string>x
    <string name="incid_cause">Causa</string>
    <string name="incid_iniKm">Km</string>
    <string name="incid_endKm">Km</string>
    <string name="incid_direct">Dirección</string>
    <string name="incid_lat">Latitud</string>
    <string name="incid_long">longitud</string>
    <string name="incid_lvl">Gravedad</string>x
    <string name="incid_iniDate">Fecha y Hora inicial</string>
    <string name="incid_endDate">Fecga y Hora final</string>
    <string name="incid_Desc">Descripción</string>
</resources>